--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@types/jest": "^29.2.5",
     "@types/supertest": "^2.0.12",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
     "jest": "^29.3.1",
+    "mongodb": "^4.13.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.3"
   },
