--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "start": "node dist/src/index.js"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.2.5",
     "@types/supertest": "^2.0.12",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
