--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "name": "express-products-vercel",
+  "name": "introductory-lesson",
   "builds": [
     {
       "src": "src/index.ts",
