--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "introductory-lesson",
   "version": "1.0.0",
-  "main": "src/app.ts",
+  "main": "src/index.ts",
   "license": "MIT",
   "scripts": {
     "watch": "tsc -w",
