--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.18",
     "mongodb-memory-server": "^8.11.4",
+    "mongoose": "^7.0.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
