--- a/package.json
+++ b/package.json
@@ -1,35 +1,48 @@
 {
-    "name": "education-monorepo",
-    "private": true,
-    "type": "module",
-    "packageManager": "yarn@1.22.22",
-    "workspaces": [
-        "apps/*",
-        "packages/*"
+  "name": "education-monorepo",
+  "private": true,
+  "type": "module",
+  "packageManager": "yarn@1.22.22",
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
+  "scripts": {
+    "dev": "turbo run dev",
+    "build": "turbo run build",
+    "build:shared": "yarn workspace @shared/core build",
+    "start": "npm run dev",
+    "lint": "turbo run lint",
+    "lint:fix": "turbo run lint:fix",
+    "prettier": "turbo run prettier",
+    "lint-staged": "lint-staged",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "**/*.{ts,tsx}": [
+      "prettier --list-different",
+      "eslint"
     ],
-    "scripts": {
-        "dev": "turbo run dev",
-        "build": "turbo run build",
-        "build:shared": "yarn workspace @shared/core build",
-        "start": "npm run dev",
-        "lint": "turbo run lint",
-        "lint:fix": "turbo run lint:fix",
-        "prettier": "turbo run prettier"
-    },
-    "devDependencies": {
-        "@eslint/js": "^9.25.1",
-        "@types/jest": "^29.5.14",
-        "@types/node": "^22.15.3",
-        "@typescript-eslint/eslint-plugin": "^8.31.1",
-        "@typescript-eslint/parser": "^8.31.1",
-        "eslint": "^9.25.1",
-        "eslint-config-prettier": "^10.1.2",
-        "eslint-plugin-unused-imports": "^4.1.4",
-        "jest": "^29.7.0",
-        "prettier": "^3.5.3",
-        "ts-jest": "^29.3.2",
-        "ts-node": "^10.9.2",
-        "turbo": "^2.5.2",
-        "typescript": "^5.8.3"
-    }
+    "*.{css,scss}": [
+      "stylelint"
+    ]
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.25.1",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.15.3",
+    "@typescript-eslint/eslint-plugin": "^8.31.1",
+    "@typescript-eslint/parser": "^8.31.1",
+    "eslint": "^9.25.1",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "husky": "^9.1.7",
+    "jest": "^29.7.0",
+    "lint-staged": "^15.5.1",
+    "prettier": "^3.5.3",
+    "ts-jest": "^29.3.2",
+    "ts-node": "^10.9.2",
+    "turbo": "^2.5.2",
+    "typescript": "^5.8.3"
+  }
 }
