--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -26,6 +26,8 @@
         "mongodb": "^6.16.0",
         "mongoose": "^8.14.1",
         "nodemailer": "^6.10.1",
+        "swagger-jsdoc": "^6.2.8",
+        "swagger-ui-express": "^5.0.1",
         "uuid": "^11.1.0"
     },
     "devDependencies": {
@@ -36,6 +38,8 @@
         "@types/jsonwebtoken": "^9.0.9",
         "@types/nodemailer": "^6.4.17",
         "@types/supertest": "^6.0.3",
+        "@types/swagger-jsdoc": "^6.0.4",
+        "@types/swagger-ui-express": "^4.1.8",
         "@types/uuid": "^10.0.0",
         "mongodb-memory-server": "^10.1.4",
         "nodemon": "^3.1.10",
