add base struct in web, update prettier and ts-config

--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "lint": "turbo run lint",
     "lint:fix": "turbo run lint:fix",
     "prettier": "turbo run prettier",
-    "lint-staged": "lint-staged",
-    "prepare": "husky"
+    "prepare": "husky install"
   },
   "lint-staged": {
     "**/*.{ts,tsx}": [
