--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,39 +1,41 @@
 {
-    "name": "web",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev --turbopack",
-        "build": "next build",
-        "start": "next start",
-        "lint:ts": "next lint",
-        "lint:ts:fix": "next lint --fix",
-        "lint:style": "stylelint \"**/*.{css,scss}\" --config .stylelintrc.cjs",
-        "lint:style:fix": "stylelint \"**/*.{css,scss}\" --config .stylelintrc.cjs --fix",
-        "lint": "yarn lint:ts && yarn lint:style",
-        "lint:fix": "yarn lint:ts:fix && yarn lint:style:fix",
-        "prettier": "prettier --write \"**/*.{ts,tsx,json,css,scss}\""
-    },
-    "dependencies": {
-        "@shared/core": "file:../../packages/shared",
-        "next": "15.3.1",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0"
-    },
-    "devDependencies": {
-        "@eslint/eslintrc": "^3",
-        "@stylistic/stylelint-plugin": "^3.1.2",
-        "@tailwindcss/postcss": "^4",
-        "@trivago/prettier-plugin-sort-imports": "^5.2.2",
-        "@types/react": "^19",
-        "@types/react-dom": "^19",
-        "eslint-config-next": "15.3.1",
-        "sass": "^1.87.0",
-        "stylelint": "^16.19.1",
-        "stylelint-config-standard-scss": "^14.0.0",
-        "stylelint-config-tailwindcss": "^1.0.0",
-        "stylelint-prettier": "^5.0.3",
-        "stylelint-use-logical": "^2.1.2",
-        "tailwindcss": "^4.1.5"
-    }
+	"name": "web",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"build": "next build",
+		"start": "next start",
+		"lint:ts": "next lint",
+		"lint:ts:fix": "next lint --fix",
+		"lint:style": "stylelint \"**/*.{css,scss}\" --config .stylelintrc.cjs",
+		"lint:style:fix": "stylelint \"**/*.{css,scss}\" --config .stylelintrc.cjs --fix",
+		"lint": "yarn lint:ts && yarn lint:style",
+		"lint:fix": "yarn lint:ts:fix && yarn lint:style:fix",
+		"prettier": "prettier --write \"**/*.{ts,tsx,json,css,scss}\""
+	},
+	"dependencies": {
+		"@shared/core": "file:../../packages/shared",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.507.0",
+		"next": "15.3.1",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0"
+	},
+	"devDependencies": {
+		"@eslint/eslintrc": "^3",
+		"@stylistic/stylelint-plugin": "^3.1.2",
+		"@tailwindcss/postcss": "^4",
+		"@trivago/prettier-plugin-sort-imports": "^5.2.2",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"eslint-config-next": "15.3.1",
+		"sass": "^1.87.0",
+		"stylelint": "^16.19.1",
+		"stylelint-config-standard-scss": "^14.0.0",
+		"stylelint-config-tailwindcss": "^1.0.0",
+		"stylelint-prettier": "^5.0.3",
+		"stylelint-use-logical": "^2.1.2",
+		"tailwindcss": "^4.1.5"
+	}
 }
