--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,7 +16,10 @@
 	},
 	"dependencies": {
 		"@shared/core": "file:../../packages/shared",
+		"@tanstack/react-query": "^5.75.1",
+		"axios": "^1.9.0",
 		"clsx": "^2.1.1",
+		"dayjs": "^1.11.13",
 		"lucide-react": "^0.507.0",
 		"next": "15.3.1",
 		"path-to-regexp": "^8.2.0",
